# python-project-52

./: Makefile  README.md  pyproject.toml  setup.cfg
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  menu.html
