[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager"
authors = ["ivan <nikbyar@gmail.com>"]
readme = "README.md"
packages = [
    { include = "task_manager" }
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
